--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -20,15 +20,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.materialswitch.MaterialSwitch
-        android:text="@string/aktivasi"
-        android:textColor="@color/black"
         android:id="@+id/feature_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
+        android:text="@string/aktivasi"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/product_image"
@@ -73,58 +73,17 @@
         app:layout_constraintTop_toBottomOf="@id/product_name"
         tools:text="Rp 0.00" />
 
-    <TextView
-        android:id="@+id/product_link"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/links_container"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/textview_border"
-        android:gravity="center"
-        android:padding="8dp"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/delete_link_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/product_price"
-        tools:text="Grab Food" />
-
-    <Button
-        android:id="@+id/delete_link_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="Hapus"
-        android:backgroundTint="@color/blue"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/product_link"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/product_price" />
-
-    <TextView
-        android:id="@+id/product_link2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/textview_border"
-        android:gravity="center"
-        android:padding="8dp"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/delete_link_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/product_link"
-        tools:text="Grab Food" />
-
-    <Button
-        android:id="@+id/delete_link_button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="@color/blue"
-        android:text="Hapus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/product_link"
-        app:layout_constraintTop_toBottomOf="@id/product_link" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
