--- a/app/src/main/res/layout/activity_detail_headline.xml
+++ b/app/src/main/res/layout/activity_detail_headline.xml
@@ -23,12 +23,24 @@
             app:navigationIcon="@drawable/baseline_arrow_back_24"/>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <com.google.android.material.materialswitch.MaterialSwitch
+        android:id="@+id/feature_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:checked="true"
+        android:layout_gravity="end|top"
+        android:text="@string/aktivasi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="-200dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_marginTop="-100dp">
 
         <com.google.android.material.card.MaterialCardView
             style="?materialCardViewElevatedStyle"
@@ -77,8 +89,6 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:enabled="false"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </com.google.android.material.card.MaterialCardView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
