--- a/app/src/main/res/layout/fragment_link.xml
+++ b/app/src/main/res/layout/fragment_link.xml
@@ -1,28 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.linkyi.DetailLinkyiActivity">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            app:title="@string/link_page"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            app:navigationIcon="@drawable/baseline_arrow_back_24"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
+    android:orientation="vertical"
+    tools:context=".ui.linkyi.tabs.LinkFragment">
     <com.google.android.material.materialswitch.MaterialSwitch
         android:id="@+id/feature_switch"
         android:layout_width="wrap_content"
@@ -30,17 +13,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:checked="true"
-        android:layout_gravity="end|top"
+        android:layout_gravity="end"
         android:text="@string/aktivasi"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="-100dp">
+        android:layout_marginTop="100dp">
 
         <com.google.android.material.card.MaterialCardView
             style="?materialCardViewElevatedStyle"
@@ -107,9 +89,8 @@
                     android:layout_marginHorizontal="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edit_name"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:enabled="false"/>
+                    app:layout_constraintBottom_toBottomOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
